fix: link alignment, legends sidebar

--- a/src/legends/components/Sidebar/components/Link/Link.module.scss
+++ b/src/legends/components/Sidebar/components/Link/Link.module.scss
@@ -20,4 +20,9 @@
     display: flex;
     justify-content: center;
   }
+
+  span {
+    line-height: 1;
+    padding-top: 0.125rem;
+  }
 }
